--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "backend",
     "type": "module",
     "version": "1.0.0",
-    "main": "index.js",
+    "main": "server.js",
     "license": "MIT",
     "scripts": {
         "start": "node server.js",
@@ -14,7 +14,8 @@
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
         "helmet": "^7.0.0",
-        "mongoose": "^7.3.0"
+        "mongoose": "^7.3.0",
+        "morgan": "^1.10.0"
     },
     "devDependencies": {
         "nodemon": "^2.0.22"
