--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
     "name": "backend",
     "type": "module",
     "version": "1.0.0",
-    "main": "server.js",
+    "main": "index.js",
     "license": "MIT",
     "scripts": {
-        "start": "node server.js",
-        "dev": "nodemon server.js"
+        "start": "node index.js",
+        "dev": "nodemon index.js"
     },
     "dependencies": {
         "body-parser": "^1.20.2",
