--- a/package.json
+++ b/package.json
@@ -9,13 +9,18 @@
         "dev": "nodemon index.js"
     },
     "dependencies": {
+        "bcrypt": "^5.1.0",
         "body-parser": "^1.20.2",
+        "cookie-parser": "^1.4.6",
         "cors": "^2.8.5",
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
+        "express-async-handler": "^1.2.0",
         "helmet": "^6.0.0",
+        "jsonwebtoken": "^9.0.0",
         "mongoose": "^6.7.3",
-        "morgan": "^1.10.0"
+        "morgan": "^1.10.0",
+        "slugify": "^1.6.6"
     },
     "devDependencies": {
         "nodemon": "^2.0.22"
